--- a/css/public.css
+++ b/css/public.css
@@ -133,7 +133,7 @@ body.index_he { height: 100vh; }
 .news_box .plan_boxs a { display: inline-block; cursor: pointer; font-size: 1.4rem; color: #b8843e; text-decoration: none; margin-bottom: 6px; -moz-transition: all 0.3s; -o-transition: all 0.3s; -webkit-transition: all 0.3s; transition: all 0.3s; }
 @media screen and (max-width: 1089px) and (min-width: 450px) { .news_box .plan_boxs a { font-size: 1.2rem; } }
 @media screen and (max-width: 449px) and (min-width: 0) { .news_box .plan_boxs a { font-size: 1rem; } }
-.news_box .plan_boxs a:hover, .news_box .plan_boxs a:active, .news_box .plan_boxs a.plan_ok { color: #b8843e; font-weight: 600; }
+.news_box .plan_boxs a:hover, .news_box .plan_boxs a:active, .news_box .plan_boxs a.plan_ok { color: #e00074; font-weight: 600; }
 
 p { padding: 0; margin: 0; }
 
@@ -141,7 +141,7 @@ p { padding: 0; margin: 0; }
 .p_title.p_left { float: left; }
 @media screen and (max-width: 449px) and (min-width: 0) { .p_title { font-size: 1.4rem; padding-top: 10px; text-align: left; } }
 
-.p_cent_type { display: inline-block; font-size: 1rem; text-align: left; line-height: 1.6rem; }
+.p_cent_type { display: inline-block; width: 100%; font-size: 1rem; text-align: left; line-height: 1.6rem; }
 
 .all_img { display: inline-block; width: 100%; max-width: 920px; }
 
